# minions

./: README.md  setup.cfg
src/fartings/: make_fartings.py
src/fartings_leonhard_chehade.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
