[metadata]
name = fartings-leonhard-chehade
version = 0.0.2
author = Leonhard Chehade
author_email = leon.chehade@outlook.de
description = Let the minions fart
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leonhard-chehade/fartings
project_urls =
    Bug Tracker = https://github.com/leonhard-chehade/fartings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires=playsound

[options.packages.find]
where = src